fixed broken styles of login/register page

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,8 +23,7 @@ body {
 	font-size: 1.3rem;
 	outline: none;
 	border: none;
-	padding: 1rem;
-	margin: 1rem;
+	padding: 0.8rem;
 	width: 100%;
 	transition: transform 0.2s ease-in;
 	&:hover {
